syntax = "proto3";

package keyauth.namespace;
option go_package = "github.com/infraboard/keyauth/pkg/namespace";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";
                               
// CreateNamespaceRequest 创建项目请求
message CreateNamespaceRequest {
    // 所属部门
    string department_id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"department_id" validate:"required,lte=80"'}
        ];
    // 项目名称
    string name = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"name" validate:"required,lte=80"'}
        ];
    // 项目描述图片
    string picture =3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"picture,omitempty"'}
        ];
    // 项目所有者, PMO
    string owner = 5[
        (google.protobuf.field_tag) = {struct_tag: 'json:"owner,omitempty"'}
        ];
    // 项目描述
    string description = 6[
        (google.protobuf.field_tag) = {struct_tag: 'json:"description,omitempty"'}
        ];
    string domain = 7[
        (google.protobuf.field_tag) = {struct_tag: 'json:"domain"'}
        ];
    // 创建者
    string create_by = 8[
        (google.protobuf.field_tag) = {struct_tag: 'json:"create_by"'}
        ];
}

// QueryNamespaceRequest 查询应用列表
message QueryNamespaceRequest {
    // 分页请求
    page.PageRequest page = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"page"'}
        ];
    // 空间的名称
    string name = 5[
        (google.protobuf.field_tag) = {struct_tag: 'json:"name"'}
        ];
    // 该用户加入的空间
    string account = 6[
        (google.protobuf.field_tag) = {struct_tag: 'json:"account"'}
        ];
    // 该部门下的空间
    string department_id = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"department_id"'}
        ];
    // 是否返回子部门的信息
    bool with_sub_department = 3[
        (google.protobuf.field_tag) = {struct_tag: 'json:"with_sub_department"'}
        ];
    // 是否返回部门的信息
    bool with_department = 4[
        (google.protobuf.field_tag) = {struct_tag: 'json:"with_department"'}
        ];
    string domain = 7[
        (google.protobuf.field_tag) = {struct_tag: 'json:"domain"'}
        ];
}

// DescriptNamespaceRequest 查询应用详情
message DescriptNamespaceRequest {
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
    bool with_department = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"with_department"'}
        ];
}


// DeleteNamespaceRequest todo
message DeleteNamespaceRequest {
    string id = 1[
        (google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
        ];
    string domain = 2[
        (google.protobuf.field_tag) = {struct_tag: 'json:"domain"'}
        ];
}